フィード分類機能の追加と自動更新タスクの拡張
- 非推奨機能の削除
- テストケースの修正